# CinemaBin

./: .gitignore
backups/: video_collection_20260129-144548.csv  video_collection_20260129-145749.csv
cinema-bin/: main.py  pyproject.toml  util.py
