[project]
name = "cinema-bin"
version = "0.1.0"
description = "Collection of watchable thangs."
authors = [
    {name = "billy Z duke"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "pygsheets (>=2.0.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
